editor: fix placeholder is not visible

--- a/packages/editor/styles/styles.css
+++ b/packages/editor/styles/styles.css
@@ -8,7 +8,7 @@
   font-family: inherit;
 }
 
-.ProseMirror p.is-editor-empty:first-child::before {
+.ProseMirror p.is-empty:first-child::before {
   color: var(--placeholder);
   content: attr(data-placeholder);
   float: left;
